--- a/index.css
+++ b/index.css
@@ -1,6 +1,5 @@
 #body{
 background-color: #FE4C4C;
-
 }
 
 #nav-bar{
@@ -15,7 +14,7 @@ width: 100%;
 
 #nav-bar a {
 color: Red;
-width:100px;
+width:160px;
 text-align: center;
 padding: 20px 15px;
 text-decoration: none;
@@ -23,10 +22,9 @@ display: block;
 font-family:  Arial;
 }
 
-
 #nav-bar a:hover {
 background-color: #ddd;
-color: black;
+color: blue;
 }
 
 #nav-bar a.active {
@@ -41,7 +39,6 @@ float: right;
 #container {
 display:flex;
 width: 100%;
-align-items: flex-end;
 }
 
 #containerLeft {
@@ -54,17 +51,16 @@ background-color: white;
 }
 
 #video{
-padding-top: 90px;
+padding-top: 150px;
 padding-left: 100px;
 padding-right: 90px;
 }
 
 #sidebar{
-padding-top: 250px;
+padding-top: 150px;
 width: 300px;
 }
 
 #li {
-align-items:center;
 list-style-type: none;
 }
